fix: welcome and session spacing

--- a/public/main.css
+++ b/public/main.css
@@ -24,3 +24,39 @@ main {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+
+.spacing-32 {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.spacing-32-horizontal {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.spacing-16 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.spacing-8 {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.divider-left {
+  margin: 0;
+}
+
+.ory-branding {
+  display: flex;
+  flex-direction: row;
+  gap: 0.375rem;
+  align-items: center;
+  padding-bottom: 2rem;
+}
